manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: "curiousgnuaks-3403"
    labels:
        app: "curiousgnuaks-3403"
spec:
    type: ClusterIP
    ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    selector:
        app: "curiousgnuaks-3403"
