manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "curiousgnuaks-3403"
    labels:
        app: "curiousgnuaks-3403"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: default-curiousgnuaks-3403.f06d6c940fd747fd88d6.eastus2.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "curiousgnuaks-3403"
                servicePort: 80
